# roguelike-thing

./: .gitignore  debug.toml  main.py  pyproject.toml
res/shaders/: default.frag  default.vert
res/sounds/: README
scripts/: create_scene.py  create_sprite.py  debug_template.txt  init_debug.py  scene_template.txt  sprite_template.txt
src/client/: main.py  resources.py  settings.py
src/client/core/: __init__.py  game.py  network.py  render_layer.py  resource.py  scene.py  sprite.py
src/client/scenes/: main_scene.py
src/client/sprites/: __init__.py  area_spell.py  camera.py  construct.py  earth_block.py  fireball.py  gust.py  inventory.py  mud.py  player.py  projectile.py  rollout.py  spell.py  spell_queue.py  steam.py  stone_cannon.py  test_decoration.py  wall_of_fire.py  waterball.py  whirlpool.py  world_border.py
src/core/: __init__.py  assets.py  game.py  render_layer.py  scene.py  sprite.py  sprite_manager.py
src/core/util/: __init__.py  general.py  hitbox.py  imports.py  resource.py  timer.py  typing.py  vector.py
src/game/: resources.py  settings.py
src/game/scenes/: __init__.py  main_scene.py  replay.py
src/game/sprites/: __init__.py  aiming_spell.py  area_aiming.py  area_spell.py  basic_enemy.py  camera.py  city.py  construct.py  death_screen.py  earth_block.py  enemy.py  entity.py  fireball.py  gust.py  mud.py  (+24 more)
src/server/: _server.py  client.py  game.py  logger.py  main.py  server.py
src/shared/: __init__.py  shared.py  sprites.py  templates.py
src/util/: __init__.py  general.py  hitbox.py  resource.py  timer.py  typing.py  vector.py
(+46 files in other folders)
